# la-patate-chaude

./: Cargo.toml  README.md
bash/: run.sh  start_server.sh  up_server.sh
client/: Cargo.toml
client/src/: args.rs  client.rs  hash_cash.rs  main.rs  message_type.rs  test_hashcash.rs
client/src/enum/: request_type.rs
la_patate_chaude-with_debug_infos/x86_64-apple-darwin/: server  start_server
server/src/: main.rs
shared/src/: challenge.rs  challenge_answer.rs  challenge_output.rs  challenge_result.rs  challenge_value.rs  end_of_game.rs  hello.rs  lib.rs  main.rs  md5_hash_cash_input.rs  md5_hash_cash_output.rs  public_leader_board.rs  public_player.rs  reported_challenge_result.rs  round_summary.rs  subscribe.rs  subscribe_error.rs  subscribe_result.rs  welcome.rs
src/: main.rs
